--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -465,13 +465,13 @@ pre {
 .post .tag-list i {
   color: #171a30;
   margin-right: 5px;
-  opacity: .6;
+  opacity: 0.6;
 }
 .post .tag-list a {
   color: #171a30;
   font-weight: 600;
   font-size: 16px;
-  opacity: .6;
+  opacity: 0.6;
 }
 .post .tag-list a:hover {
   color: #00ada7;
@@ -538,8 +538,8 @@ pre {
   color: #FFFFFF;
   margin: 0 5px;
   display: inline-block;
-  line-height: 36px;
-  padding: 0 14px;
+  line-height: 1;
+  padding: 12px 14px;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
@@ -963,25 +963,25 @@ p {
 .post-template .tag-list {
   margin: 3px;
 }
-.home-template .kg-card-markdown * {
+.home-template .post .kg-card-markdown * {
   display: none;
 }
-.home-template .kg-card-markdown p,
-.home-template .kg-card-markdown a,
-.home-template .kg-card-markdown iframe {
+.home-template .post .kg-card-markdown a,
+.home-template .post .kg-card-markdown iframe,
+.home-template .post .kg-card-markdown p {
   display: inherit !important;
 }
-.home-template a {
+.home-template .post a {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.home-template .tag-video .fluid-width-video-wrapper {
+.home-template .post.tag-video .fluid-width-video-wrapper {
   display: block !important;
 }
-.home-template .tag-video .post-permalink {
+.home-template .post.tag-video .post-permalink {
   display: none;
 }
-.home-template .tag-video .post-content {
+.home-template .post.tag-video .post-content {
   margin: 30px 0 5px;
 }
