--- a/partials/widget-text.hbs
+++ b/partials/widget-text.hbs
@@ -3,7 +3,7 @@
 	<h4 class="title">Welcome</h4>
 	<div class="content">
 		<p style="font-weight: 600;">We're a collective of unprofessional professionals who like to build things.</p>
-		<p>While we may be developers, programming is merely the means to an end, which is to enhance the small moments we call life.</p>
+		<p>We use programming to acheive a means to an end, which is to enhance the small moments we call life. That, and also expediting the impending robot enslavement of humanity.</p>
 	 </div>
 </div>
 <!-- end widget -->
