--- a/custom-tag-archive.hbs
+++ b/custom-tag-archive.hbs
@@ -10,7 +10,7 @@
 				{{#post}}
 				<article class="{{post_class}}">
 					<div class="post-head">
-						<h1 class="post-title h2">{{{title}}}</h1>
+						<h1 class="post-title">{{{title}}}</h1>
 					</div>
 					{{#if feature_image}}
 					<div class="featured-media" style="background-image: url({{feature_image}});">
@@ -23,21 +23,21 @@
 				{{/post}}
 				<!-- end post -->
 			</div>
-            
-            {{#get "tags" limit="all" include="count.posts" order="count.posts desc"}}
-            {{#foreach tags}}
+
+            {{#get "tags" filter="feature_image:-null" include="count.posts,meta_title" order="count.posts desc"}}
+            {{#foreach tags visibility="internal"}}
             <div class="col-md-6">
                 <div class="tag-wrapper">
                     <a href="{{url}}">
                         <div class="bg-wrapper {{#unless feature_image}}no-image{{/unless}}" {{#if feature_image}}style="background-image: url({{feature_image}});"{{/if}}>
                             <div class="overlay">
-                                <h2 class="tag-title h3">{{name}}</h2>
-                                <div class="meta-info">
-                                    <span>{{t "Total"}} {{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</span>
-                                </div>
+                                <h2 class="tag-title">{{meta_title}}</h2>
                                 {{#if description}}
                                 <p class="description tag-description">{{description}}</p>
                                 {{/if}}
+																<div class="meta-info">
+                                    <span>{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</span>
+                                </div>
                             </div>
                         </div>
                     </a>
@@ -45,7 +45,6 @@
             </div>
             {{/foreach}}
             {{/get}}
-            
 			<!-- end main post area -->
 		</div>
 	</div>
