--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -17,11 +17,11 @@
 	<div class="post-head">
 		<h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
 		<h5>{{excerpt}}</h5>
-		<div class="post-meta">
+		{{!--<div class="post-meta">
 			<span class="author"><i class="far fa-user"></i> {{authors separator=", "}}</span>
 			<span class="date"><i class="fal fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span><!-- &bull;
 			<span class="comment-count"><a href="{{url}}#disqus_thread">{{t "0 Comments"}}</a></span>-->
-		</div>
+		</div>--}}
 	</div>
 	{{#if feature_image}}
 	<div class="featured-media">
@@ -33,10 +33,15 @@
 	</div>
 	<div class="post-permalink">
 		<div class="pull-left tag-list">
+			<span class="author"><i class="far fa-user"></i><span>{{#author}}{{slug}}{{/author}}</span></span>
+			<span class="tags">
 			{{#if tags}}
-			<i class="fal fa-tags"></i>
+				<i class="fal fa-tags"></i>
 			{{tags limit="1"}}
 			{{/if}}
+			</span>
+			<span class="date"><i class="fal fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span>
+		</span>
 		</div>
 		<a href="{{url}}" class="btn btn-default">{{t "Continue Reading"}}</a>
 	</div>
