--- a/partials/widget-authors.hbs
+++ b/partials/widget-authors.hbs
@@ -5,7 +5,11 @@
 		{{#get "users"}}
 			{{#foreach users}}
 				<div class="recent-single-post">
+					{{#if profile_image}}
         		<a href="{{url}}"><img src="{{img_url profile_image}}" alt="Author image" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></a>
+					{{else}}
+						<a href="{{url}}"><i class="fas fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i></a>
+					{{/if}}
 					<a href="{{url}}" class="post-title">{{name}}</a>
 				</div>
 				{{/foreach}}
