--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -35,7 +35,7 @@
         (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
     }());
     </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="{{asset "/js/jquery.min.js"}}"></script>
 	<script src="{{asset "/js/jquery.fitvids.js"}}"></script>
 	<script src="{{asset "/js/bootstrap.min.js"}}"></script>
 	<script src="{{asset "/js/jflickrfeed.min.js"}}"></script>
