--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -212,6 +212,7 @@ pre {
 }
 .tag-roundup .featured-media {
   display: none;
+  border-radius: 3px;
 }
 .tag-roundup .post-head {
   border-bottom: 1px solid #e9e9e9;
@@ -434,6 +435,7 @@ pre {
 }
 .post .featured-media {
   overflow: hidden;
+  border-radius: 3px;
 }
 .post .featured-media img {
   width: 100%;
@@ -517,35 +519,30 @@ pre {
 .post .share .share-icons {
   padding: 0;
   margin: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 145px;
 }
 .post .share .share-icons li {
   list-style: none;
   display: inline-block;
-  /* width: 38px; */
-  /* height: 29px; */
   line-height: 28px;
   border: 1px solid #ebebeb;
   font-size: 15px;
   padding: 0 7px;
+  transition: 0.2s all ease-out;
+}
+.post .share .share-icons li:hover {
+  color: #FFFFFF;
+  background: #00ada7;
+  border: 1px solid #00ada7;
+}
+.post .share .share-icons li:hover a {
+  color: #FFFFFF;
 }
 .post .share .share-icons li a {
   color: #c4c4c4;
   text-align: center;
-  /*
-						li {
-							width: 28px;
-							height: 28px;
-							line-height: 28px;
-							border: 1px solid @border-color;
-							.border-radius(50%);
-							.transition(all 0.2s ease);
-							font-size: 12px;
-						}*/
-}
-.post .share .share-icons li a:hover li {
-  color: #FFFFFF;
-  background: #00ada7;
-  border: 1px solid #00ada7;
 }
 /*====================================================
 	pagination
@@ -591,8 +588,9 @@ pre {
   margin-bottom: 35px;
 }
 .about-author .avatar {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
+  margin-right: 15px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
@@ -604,7 +602,7 @@ pre {
   }
 }
 .about-author .details {
-  margin-left: 114px;
+  margin-left: 95px;
 }
 @media (max-width: 600px) {
   .about-author .details {
@@ -910,9 +908,13 @@ p {
   background-position: center;
 }
 .tag-wrapper {
-  padding: 35px;
   background: #FFFFFF;
   margin-bottom: 35px;
+}
+@media (max-width: 1040px) {
+  .tag-wrapper {
+    padding: 35px;
+  }
 }
 .tag-wrapper h2 {
   font-weight: 700;
@@ -922,6 +924,8 @@ p {
   background-position: center;
   text-align: center;
   height: 100%;
+  min-height: 308px;
+  position: relative;
 }
 .tag-wrapper a .bg-wrapper .overlay {
   padding: 35px 14px;
@@ -933,6 +937,8 @@ p {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
   height: 100%;
+  width: 100%;
+  position: absolute;
 }
 .tag-wrapper a .bg-wrapper .overlay .tag-title {
   color: #FFFFFF;
@@ -1039,23 +1045,23 @@ p {
   background-position-x: center;
   border-radius: 3px;
 }
+.post-template .link-preview i {
+  display: inline-block;
+  font-size: 12px;
+  margin-right: 10px;
+  color: grey;
+}
 .post-template .link-preview .url-info {
   color: #00ada7;
   margin-top: 0;
   font-size: 12px;
-}
-.post-template .link-preview .url-info i {
-  margin-right: 10px;
-  display: inline-block;
-}
-.post-template .link-preview .url-info span {
   display: inline-block;
   margin: 0 !important;
-  height: 18px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   width: 80%;
+  line-height: 1;
 }
 .post-template .link-preview .link-info {
   display: inline-block;
@@ -1071,7 +1077,7 @@ p {
   color: #505050;
   font-weight: 100;
   line-height: 1.3;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   font-size: 14px;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -1084,6 +1090,7 @@ p {
   color: #fff;
   cursor: pointer;
   text-decoration: none;
+  border: 1px solid #00ada7;
 }
 .post-template .link-preview:hover h4,
 .post-template .link-preview:hover p,
@@ -1143,4 +1150,10 @@ p {
 .author-template .post.tag-video .post-content,
 .tag-template .post.tag-video .post-content {
   margin: 0 0 5px;
+}
+.page-about .col-md-6 {
+  padding: 0;
+}
+.page-about .col-md-6:nth-of-type(1) {
+  padding: 0 30px 0 0;
 }
