--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -211,6 +211,7 @@ pre {
 .tag-roundup {
 	.featured-media {
 		display: none;
+		border-radius: 3px;
 	}
 
 	.post-head {
@@ -447,6 +448,7 @@ pre {
 
 		.featured-media {
 			overflow: hidden;
+			border-radius: 3px;
 
 			img {
 				width: 100%;
@@ -549,39 +551,32 @@ pre {
 			.share-icons {
 				padding: 0;
 				margin: 0;
+				display: flex;
+				justify-content: space-between;
+				width: 145px;
 
 				li {
 					list-style: none;
 					display: inline-block;
-					list-style: none;
-					display: inline-block;
-					/* width: 38px; */
-					/* height: 29px; */
 					line-height: 28px;
 					border: 1px solid @border-color;
 					font-size: 15px;
 					padding: 0 7px;
+					transition: .2s all ease-out;
+
+					&:hover {
+						color: @white;
+						background: @theme-color;
+						border: 1px solid @theme-color;
+
+						a {
+							color: @white;
+						}
+					}
 
 					a {
 						color: #c4c4c4;
 						text-align: center;
-						/*
-						li {
-							width: 28px;
-							height: 28px;
-							line-height: 28px;
-							border: 1px solid @border-color;
-							.border-radius(50%);
-							.transition(all 0.2s ease);
-							font-size: 12px;
-						}*/
-						&:hover {
-							li {
-								color: @white;
-								background: @theme-color;
-								border: 1px solid @theme-color;
-							}
-						}
 					}
 				}
 			}
@@ -634,8 +629,9 @@ pre {
 		margin-bottom: 35px;
 
 		.avatar {
-			width: 100px;
-			height: 100px;
+			width: 80px;
+			height: 80px;
+			margin-right: 15px;
 			.border-radius(50%);
 			@media(max-width: 600px) {
 				width: 70px;
@@ -644,7 +640,7 @@ pre {
 		}
 
 		.details {
-			margin-left: 114px;
+			margin-left: 95px;
 			@media(max-width: 600px) {
 				margin-left: 90px;
 			}
@@ -1006,9 +1002,12 @@ pre {
 	}
 
 	.tag-wrapper {
-		padding: 35px;
 		background: @white;
 		margin-bottom: 35px;
+
+		@media(max-width: 1040px) {
+			padding: 35px;
+		}
 
 		h2 {
 			font-weight: 700;
@@ -1020,6 +1019,8 @@ pre {
 				background-position: center;
 				text-align: center;
 				height: 100%;
+				min-height: 308px;
+				position: relative;
 
 				.overlay {
 					padding: 35px 14px;
@@ -1027,6 +1028,8 @@ pre {
 					color: @white;
 					.transition(all 0.2s ease-in-out);
 					height: 100%;
+					    width: 100%;
+					position: absolute;
 
 					.tag-title {
 						color: @white;
@@ -1163,25 +1166,26 @@ pre {
 				border-radius: 3px;
 			}
 
+			i {
+				margin-right: 10px;
+				display: inline-block;
+				font-size: 12px;
+		    margin-right: 10px;
+		    color: grey;
+			}
+
 			.url-info {
 				color: @theme-color;
 				margin-top: 0;
 				font-size: 12px;
+				display: inline-block;
+				margin: 0 !important;
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				width: 80%;
+				line-height: 1;
 
-				i {
-					margin-right: 10px;
-					display: inline-block;
-				}
-
-				span {
-					display: inline-block;
-					margin: 0 !important;
-					height: 18px;
-					white-space: nowrap;
-					overflow: hidden;
-					text-overflow: ellipsis;
-					width: 80%;
-				}
 			}
 
 			.link-info {
@@ -1200,7 +1204,7 @@ pre {
 					color: #505050;
 					font-weight: 100;
 					line-height: 1.3;
-					margin-bottom: 10px;
+					margin-bottom: 20px;
 					font-size: 14px;
 
 					text-overflow: ellipsis;
@@ -1216,6 +1220,7 @@ pre {
 				color: #fff;
 				cursor: pointer;
 				text-decoration: none;
+				border: 1px solid @theme-color;
 
 				h4,
 				p,
@@ -1275,5 +1280,15 @@ pre {
 		.post-content {
 			margin: 0 0 5px;
 		}
+	}
+}
+
+
+.page-about {
+	.col-md-6 {
+		padding:0;
+	}
+	.col-md-6:nth-of-type(1) {
+		padding:0 30px 0 0;
 	}
 }
