--- a/post.hbs
+++ b/post.hbs
@@ -28,8 +28,8 @@
 					</div>
 					<footer class="post-footer clearfix">
 						<div class="pull-left tag-list">
-							<span class="author">{{#author}}<a href="{{url}}"><img src="{{img_url profile_image}}" alt="Author image" style="border-radius: 50%; display:inline-block;"></a> {{name}}{{/author}}</span>
-							<span class="date"><i class="fal fa-calendar"></i> {{date format="MMMM DD, YYYY"}}</span>
+							<span class="author">{{#author}}<a href="{{url}}"><i class="far fa-user"></i></a><span>{{name}}</span>{{/author}}</span>
+							<span class="date"><i class="fal fa-calendar"></i><span>{{date format="MMMM DD"}}</span></span>
 							{{#if tags}}
 							<i class="fal fa-tags"></i>
 							{{tags separator=","}}
