--- a/partials/widget-tagcloud.hbs
+++ b/partials/widget-tagcloud.hbs
@@ -2,7 +2,7 @@
 <div class="widget">
 	<h4 class="title">{{t "Tags"}}</h4>
 	<div class="content tag-cloud">
-		{{#get "tags" limit="all" order="name asc"}}{{tags separator="" }}{{/get}}
+		{{#get "tags" filter="feature_image:null" order="name asc"}}{{tags separator="" }}{{/get}}
 	</div>
 </div>
 <!-- end tag cloud widget -->
