--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -65,7 +65,6 @@ h2 {
   .h2,
   h2 {
     font-size: 1.5em;
-    font-weight: 300;
   }
 }
 .home-template h2 {
@@ -95,7 +94,7 @@ h4 {
 h5 {
   font-size: 1.4em;
   font-weight: 500;
-  margin: 5px 0 0 0;
+  margin: 5px 0 0;
   font-family: 'mr-eaves-xl-modern', serif;
   color: #525568;
   line-height: 1;
@@ -110,6 +109,9 @@ h5 {
 .h6,
 h6 {
   font-size: 0.75em;
+}
+.post-title {
+  font-weight: 700;
 }
 .post-title .h2 {
   text-align: left;
@@ -210,11 +212,11 @@ pre {
   background: #00ada7;
   text-shadow: none;
 }
-.tag-roundup .featured-media {
+.home-template .tag-roundup .featured-media {
   display: none;
   border-radius: 3px;
 }
-.tag-roundup .post-head {
+.home-template .tag-roundup .post-head {
   border-bottom: 1px solid #e9e9e9;
   padding-bottom: 20px;
 }
@@ -457,6 +459,11 @@ pre {
   margin: 0;
   display: block;
 }
+@media (max-width: 600px) {
+  .post .post-content iframe {
+    height: 100%;
+  }
+}
 .post .post-content img {
   max-width: 100%;
   margin-bottom: 14px;
@@ -491,13 +498,13 @@ pre {
 .post .tag-list .author {
   text-transform: capitalize;
 }
-.post .tag-list .date span,
-.post .tag-list .author span {
+.post .tag-list .author span,
+.post .tag-list .date span {
   opacity: 0.6;
 }
 @media (max-width: 600px) {
-  .post .tag-list .date,
-  .post .tag-list .author {
+  .post .tag-list .author,
+  .post .tag-list .date {
     display: none;
   }
 }
@@ -805,7 +812,7 @@ pre {
   text-align: center;
   background: #FFFFFF;
   padding: 35px;
-  margin-bottom: 35px;
+  margin-bottom: 25px;
 }
 .cover .tag-name {
   margin-top: 0;
@@ -1023,7 +1030,7 @@ p {
 .post-template .link-preview {
   border: 1px solid #dadada;
   padding: 20px;
-  width: 80%;
+  width: 90%;
   transition: all 0.2s ease-out;
   min-height: 140px;
   border-radius: 3px;
@@ -1036,14 +1043,20 @@ p {
 }
 .post-template .link-preview .preview-image {
   display: inline-block;
-  margin: 0 20px 0 0;
+  margin: 0 20px 20px 0;
   height: 100px;
   width: 100px;
   float: left;
-  background-image: url(https://hackers.nyc3.digitaloceanspaces.com/linkpreview.jpg);
+  background-image: url("https://hackers.nyc3.digitaloceanspaces.com/linkpreview.jpg");
   background-size: cover;
   background-position-x: center;
   border-radius: 3px;
+}
+@media (max-width: 600px) {
+  .post-template .link-preview .preview-image {
+    height: 50px;
+    width: 50px;
+  }
 }
 .post-template .link-preview i {
   display: inline-block;
@@ -1077,7 +1090,7 @@ p {
   color: #505050;
   font-weight: 100;
   line-height: 1.3;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-size: 14px;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -1092,62 +1105,62 @@ p {
   text-decoration: none;
   border: 1px solid #00ada7;
 }
+.post-template .link-preview:hover a,
 .post-template .link-preview:hover h4,
-.post-template .link-preview:hover p,
-.post-template .link-preview:hover a {
+.post-template .link-preview:hover p {
   color: #fff;
 }
 .page-template .post-title {
   margin-bottom: 20px !important;
 }
-.home-template .post .kg-card-markdown *,
 .author-template .post .kg-card-markdown *,
+.home-template .post .kg-card-markdown *,
 .tag-template .post .kg-card-markdown * {
   display: none;
 }
-.home-template .post .kg-card-markdown a,
 .author-template .post .kg-card-markdown a,
+.home-template .post .kg-card-markdown a,
 .tag-template .post .kg-card-markdown a,
-.home-template .post .kg-card-markdown iframe,
 .author-template .post .kg-card-markdown iframe,
+.home-template .post .kg-card-markdown iframe,
 .tag-template .post .kg-card-markdown iframe,
-.home-template .post .kg-card-markdown p,
 .author-template .post .kg-card-markdown p,
+.home-template .post .kg-card-markdown p,
 .tag-template .post .kg-card-markdown p {
   display: inherit !important;
 }
-.home-template .post .kg-card-markdown p,
 .author-template .post .kg-card-markdown p,
+.home-template .post .kg-card-markdown p,
 .tag-template .post .kg-card-markdown p {
   margin-bottom: 0;
 }
-.home-template .post .kg-card-markdown a,
 .author-template .post .kg-card-markdown a,
+.home-template .post .kg-card-markdown a,
 .tag-template .post .kg-card-markdown a {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   display: inline !important;
 }
-.home-template .post.tag-video .fluid-width-video-wrapper,
 .author-template .post.tag-video .fluid-width-video-wrapper,
+.home-template .post.tag-video .fluid-width-video-wrapper,
 .tag-template .post.tag-video .fluid-width-video-wrapper {
   display: block !important;
 }
 @media (max-width: 500px) {
-  .home-template .post.tag-video .fluid-width-video-wrapper,
   .author-template .post.tag-video .fluid-width-video-wrapper,
+  .home-template .post.tag-video .fluid-width-video-wrapper,
   .tag-template .post.tag-video .fluid-width-video-wrapper {
     height: 160px;
   }
 }
-.home-template .post.tag-video .post-permalink,
 .author-template .post.tag-video .post-permalink,
+.home-template .post.tag-video .post-permalink,
 .tag-template .post.tag-video .post-permalink {
   display: none;
 }
-.home-template .post.tag-video .post-content,
 .author-template .post.tag-video .post-content,
+.home-template .post.tag-video .post-content,
 .tag-template .post.tag-video .post-content {
   margin: 0 0 5px;
 }
@@ -1156,4 +1169,40 @@ p {
 }
 .page-about .col-md-6:nth-of-type(1) {
   padding: 0 30px 0 0;
+}
+@media (max-width: 600px) {
+  .page-about .col-md-6:nth-of-type(1) {
+    padding: 0;
+  }
+}
+.active {
+  display: block !important;
+}
+@media (max-width: 1040px) {
+  .col-sm-12 {
+    padding-right: 0;
+    padding-left: 0;
+  }
+  .col-sm-12 .menu {
+    display: flex;
+    justify-content: space-between;
+    max-width: 600px;
+    margin: auto;
+  }
+  .col-sm-12 .navbar-collapse {
+    padding-right: 0;
+    padding-left: 0;
+    display: block;
+  }
+  .col-sm-12 .navbar-collapse li {
+    display: inline-block;
+    padding: 20px 0;
+  }
+  .col-sm-12 .navbar-collapse li a {
+    line-height: 1;
+    font-size: 15px;
+  }
+  .col-sm-12 .navbar-header {
+    display: none;
+  }
 }
